Fixed Final touches on mobile CSS

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -321,7 +321,7 @@ h2 {
     }
 
     .desktop-only {
-        font-size: none; 
+        font-size: 0; 
     }
 }
 
