--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -6,8 +6,8 @@ main {
     justify-content: flex-start;
     gap: 20px;
     margin-bottom: 50px;
-    background-color: #012328;
-    height: calc(100vh - 100px);
+    background-color: #161a1c;
+    min-height: calc(100vh - 100px);
     overflow-y: auto;
 }
 
@@ -18,7 +18,7 @@ main {
 }
 
 hr {
-    width: 100%;
+    width: calc(100% - 2px);
     padding: 0;
     margin: 0;
     border: 1px solid #A6A6AF;
@@ -121,4 +121,67 @@ section p {
 
 a {
     text-decoration: none;
+}
+
+@media (max-width: 768px) { 
+    main {
+        overflow-x: hidden;
+    }
+    
+    h1 {
+        font-size: 1.5rem;
+        margin-left: 5px;
+    }
+    
+    section {
+        width: 100%;
+    }
+    
+    section p {
+        font-size: 1rem;
+    }
+    
+    .grid-header {
+        box-sizing: border-box;
+        display: grid;
+        grid-template-columns: 3fr 1fr 1fr;
+        gap: 40px;
+    }
+    
+    .grid-header p {
+        padding: 0px 10px;
+        font-weight: bold;
+        color: white;
+    }
+
+    .grid-header p:last-of-type {
+        margin-right: 10px;
+    }
+    
+    .item-card {
+        display: grid;
+        grid-template-columns: 3fr 1fr 1fr;
+        gap: 40px;
+        box-sizing: border-box;
+    }
+    
+    .item-card p {
+        padding: 0px 10px;
+        font-size: 1rem;
+    }
+
+    #buttons {
+        margin-left: 0px;
+        margin-right: 10px;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        gap: 10px;
+    }
+}
+
+@media (max-width: 1410px) and (min-width: 768px) {
+    section {
+        width: 90%;
+    }
 }
